--- a/src/app/component/invoice-form/invoice-form.component.html
+++ b/src/app/component/invoice-form/invoice-form.component.html
@@ -1,22 +1,4 @@
-<div class="container">
-  <button
-    type="button"
-    class="btn btn-primary"
-    data-bs-toggle="modal"
-    data-bs-target="#exampleModal"
-    data-bs-whatever="@getbootstrap"
-  >
-    Open modal for @getbootstrap
-  </button>
-</div>
-
-<div
-  class="modal fade"
-  id="exampleModal"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
+<div id="exampleModal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
